# gelf-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs
dev/: docker-compose.yml
examples/: simple_tcp.rs  simple_udp.rs
examples/shared/: mod.rs
src/: errors.rs  level.rs  lib.rs  logger.rs  message.rs  util.rs
src/backends/: mod.rs  null.rs  tcp.rs  udp.rs
src/message/: chunked_message.rs  compression.rs  mod.rs  wire_message.rs
