[package]
name = "gelf"
version = "0.2.2"
authors = ["Benjamin Zikarsky <benjamin@zikarsky.de>"]
description = "A library for logging GELF messages to a Graylog compatible server"
repository = "https://github.com/bzikarsky/gelf-rust"
homepage = "https://github.com/bzikarsky/gelf-rust"
documentation = "https://docs.rs/gelf/"
keywords = ["gelf", "log", "graylog", "logging"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "^0.3.6"
chrono = "^0.3.0"
hostname = "^0.1.3"
libc = "^0.2.20"
serde_json = "^0.9.6"
serde = "^0.9.7"
libflate = "^0.1.3"
rand = "^0.3.15"
error-chain = "^0.11.0-rc.2"
