[package]
name = "gelf"
version = "0.3.1"
authors = ["Benjamin Zikarsky <benjamin@zikarsky.de>"]
description = "A library for logging GELF messages to a Graylog compatible server"
repository = "https://github.com/bzikarsky/gelf-rust"
homepage = "https://github.com/bzikarsky/gelf-rust"
documentation = "https://docs.rs/gelf/"
keywords = ["gelf", "log", "graylog", "logging"]
license = "MIT"
readme = "README.md"

[dependencies]
log = { version = "0.4", features = ["std"] }
chrono = "^0.4.0"
failure = "0.1"
hostname = "^0.1.3"
libc = "^0.2.20"
serde_json = "^1.0.0"
serde = "^1.0.0"
libflate = "^0.1.3"
rand = "^0.3.15"
