[package]
name = "gelf"
version = "0.5.0"
authors = ["Benjamin Zikarsky <benjamin@zikarsky.de>"]
description = "A library for logging GELF messages to a Graylog compatible server"
repository = "https://github.com/bzikarsky/gelf-rust"
homepage = "https://github.com/bzikarsky/gelf-rust"
documentation = "https://docs.rs/gelf/"
keywords = ["gelf", "log", "graylog", "logging"]
license = "MIT"
edition = "2018"
readme = "README.md"

[dependencies]
log = { version = "0.4", features = ["std"] }
chrono = { version = "^0.4.0", features = ["serde"] }
failure = "0.1"
hostname = "^0.1.3"
libc = "^0.2.20"
serde_json = "^1.0.0"
serde = { version = "^1.0.0", features = ["derive"] }
rand = "^0.7.2"
libdeflater = "0.2.0"
bytes = "0.4.12"
serde_with =  { version = "1.3.1" }

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
criterion = "0.3.0"
jemallocator = "0.3.2"
loom = "0.2.14"

[[bench]]
name = "benchmark"
path = "benches/benchmarks.rs"
harness = false
